--- a/plugins/google-play-services/saved-games/saving_game.html
+++ b/plugins/google-play-services/saved-games/saving_game.html
@@ -218,7 +218,7 @@
                                 <b>Conflict Resolution Policy</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                The policy to be used when there is a conflict between the locally saved snapshot and the snapshot stored on the server.
+                                The <a href="resolution_policy.html">Resolution Policy</a> to be used when there is a conflict between the locally saved snapshot and the snapshot stored on the server.
                                 This policy determines which snapshot will be used and how the conflict will be resolved behind the scenes.
                             </p>
                         </div>
@@ -248,7 +248,7 @@
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
                                 A delegate that will be called if there is an error during the snapshot save operation.
-                                The delegate will produce an error type for the developer to handle appropriately.
+                                The delegate will produce an <a href="snapshot_error.html">Snapshot Error</a> type for the developer to handle appropriately.
                                 You can simply click and drag this pin to create a custom event.
                             </p>
                         </div>
