--- a/plugins/google-play-services/saved-games/loading_game.html
+++ b/plugins/google-play-services/saved-games/loading_game.html
@@ -123,11 +123,11 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            This is an asynchronous function which allows you to save a game to a snapshot in Google Play Services.
+                            This is an asynchronous function which allows you to load a game from a Snapshot stored in Google Play Services.
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            The parameters include the name of the slot to save to, a description of the save game, the amount of time played, a progress value, the save game object to be saved and the conflict resolution policy to be used.
-                            <br/>Once the asynchronous operation has completed, one of two delegates will be called to handle the success and failure situations.
+                            The parameters include the name of the slot to load from and a conflict resolution policy to be used.</br>
+                            Once the asynchronous operation has completed, one of two delegates will be called to handle the success and failure situations.
                         </p>
                     </div>
                 </div>
@@ -143,9 +143,8 @@
                             <b>Slot Name</b>
                         </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            The slot name is a string that uniquely identifies the slot where the save game will be stored.
-                            A slot represents a specific point in time that the game was saved, and multiple snapshots can be stored under different slot names.
-                            Providing a new slot name will result in a new snapshot, whereas if it already exists, it will overwrite the existing slots data.
+                            The slot name is a string that uniquely identifies the slot to be loaded.
+                            A slot represents a specific point in time that the game was saved.
                         </p>
                     </div>
                 </div>
@@ -157,8 +156,8 @@
                                 <b>Conflict Resolution Policy</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A brief description of the saved game data. This can be used to help the player identify different saved games in the future.
-                                This value is stored in the Snapshots metadata.
+                                The <a href="resolution_policy.html">Resolution Policy</a> to be used when there is a conflict between the locally saved snapshot and the snapshot stored on the server.
+                                This policy determines which snapshot will be used and how the conflict will be resolved behind the scenes.
                             </p>
                         </div>
                     </div>
@@ -171,9 +170,9 @@
                                 <b>On Game Data Retrieved</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                The amount of time that the player has spent playing the game, in milliseconds.
-                                This value is typically used to track progress and help the player resume from where they left off in the game.
-                                This value is stored in the Snapshots metadata and can optionally be used in a provided conflict resolution strategy.
+                                A delegate with <span style="font-weight: 500">UObject*</span> and <span style="font-weight: 500">SnapshotMetadata</span> parameters.
+                                The <span style="font-weight: 500">UObject*</span> must be cast to the appropriate object which it was saved as and the metadata can be used later when <a href="saving_game.html">Saving the Game</a> to update the PlayedTime and ProgressValue's appropriately. 
+                                You can simply click and drag this pin to create a custom event.
                             </p>
                         </div>
                     </div>
@@ -186,9 +185,9 @@
                                 <b>On Failure</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A numeric value representing the player's progress in the game.
-                                This can be used to track the player's progress and help them resume from the correct point in the game.
-                                This value is stored in the Snapshots metadata and can optionally be used in a provided conflict resolution strategy.
+                                A delegate that will be called if there is an error during the snapshot load operation.
+                                The delegate will produce an <a href="snapshot_error.html">Snapshot Error</a> type for the developer to handle appropriately.
+                                You can simply click and drag this pin to create a custom event.
                             </p>
                         </div>
                     </div>
