--- a/plugins/google-play-services/saved-games/resolution_policy.html
+++ b/plugins/google-play-services/saved-games/resolution_policy.html
@@ -129,11 +129,49 @@
                 </div>
                 <div style="padding-top: 30px">
                     <div class="container" style="margin-left: 0px; padding-left: 0px; position: relative;">
-                        <div class="info">
-                            <p class="content" style="margin-bottom: 0rem;">
-                                Table of fields, types and descritpions goes here...
-                            </p>
-                        </div>
+                        <table class="table table-striped table-bordered" style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th>Resolution Policy</th>
+                                    <th>Description</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>RESOLUTION_POLICY_MANUAL</td>
+                                    <td>
+                                        Custom conflict resolution strategy defined by the developer.</br>
+                                        This is defined by making use of the <a href="conflict_resolution.html">Conflict Resolution</a> blueprint node.</br>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>RESOLUTION_POLICY_LONGEST_PLAYTIME</td>
+                                    <td>
+                                        Will choose the snapshot with the longest play time, a field within the <a href="snapshot_metadata.html">SnapshotMetadata</a>.</br>
+                                        This value is controlled by the developer when <a href="saving_game.html">Saving a Game</a>.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>RESOLUTION_POLICY_LAST_KNOWN_GOOD</td>
+                                    <td>
+                                        Will choose the snapshot that is in the last known working stater, ie. before any conflicts had occured.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>RESOLUTION_POLICY_MOST_RECENTLY_MODIFIED</td>
+                                    <td>
+                                        Will choose the snapshot that was most recently modified.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>RESOLUTION_POLICY_HIGHEST_PROGRESS</td>
+                                    <td>
+                                        Will choose the snapshot with the highest progress, a field within the <a href="snapshot_metadata.html">SnapshotMetadata</a>.</br>
+                                        This value is controlled by the developer when <a href="saving_game.html">Saving a Game</a>.
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
                 <canvas class="my-4 w-100" id="myChart"></canvas>
