--- a/plugins/google-play-services/saved-games/snapshot.html
+++ b/plugins/google-play-services/saved-games/snapshot.html
@@ -139,11 +139,33 @@
                         </div>
                     </div>
                     <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px;">
-                        <div class="info">
-                            <p class="content" style="margin-bottom: 0rem;">
-                                Table of fields, types and descritpions goes here...
-                            </p>
-                        </div>
+                        <table class="table table-striped table-bordered" style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
+                            <thead class="thead-dark">
+                                <tr>
+                                <th>Field</th>
+                                <th>Type</th>
+                                <th>Description</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>SaveGameObject</td>
+                                    <td>UObject*</td>
+                                    <td>
+                                        A pointer to the binary data of the save game object itself.</br>
+                                        Must be cast to the appropriate object type when making use of it.</br>
+                                        Defined when <a href="saving_game.html">Saving a Game</a>.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>SnapshotMetadata</td>
+                                    <td><a href="snapshot_metadata.html">SnapshotMetadata</a></td>
+                                    <td>
+                                        A struct containing various additional pieces of information about the Snapshot.
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
                 <div style="margin-bottom: 150px">
