--- a/plugins/google-play-services/saved-games/snapshot_metadata.html
+++ b/plugins/google-play-services/saved-games/snapshot_metadata.html
@@ -146,11 +146,78 @@
                     </div>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-top: 20px; padding-left: 0px;">
-                    <div class="info">
-                        <p class="content" style="margin-bottom: 0rem;">
-                            Table of fields, types and descritpions goes here...
-                        </p>
-                    </div>
+                    <table class="table table-striped table-bordered" style="margin-bottom: 0; box-shadow: 1px 1px 3px #ccc;">
+                        <thead class="thead-dark">
+                            <tr>
+                            <th>Field</th>
+                            <th>Type</th>
+                            <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Description</td>
+                                <td>FString</td>
+                                <td>
+                                    A brief description of the saved game data.</br>
+                                    Defined when <a href="saving_game.html">Saving a Game</a>.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>PlayedTime</td>
+                                <td>int64</td>
+                                <td>
+                                    A value indicating how long the player has played with this Snapshot.</br>
+                                    Used with <a href="resolution_policy.html">Resolution Policy</a> RESOLUTION_POLICY_LONGEST_PLAYTIME.</br>
+                                    Defined when <a href="saving_game.html">Saving a Game</a>.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>ProgressValue</td>
+                                <td>int64</td>
+                                <td>
+                                    A value indicating how far the player has progressed with this Snapshot.</br>
+                                    Used with <a href="resolution_policy.html">Resolution Policy</a> RESOLUTION_POLICY_HIGHEST_PROGRESS.</br>
+                                    Defined when <a href="saving_game.html">Saving a Game</a>.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>SnapshotID</td>
+                                <td>FString</td>
+                                <td>
+                                    The players Google Drive ID for the Snapshot.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>UniqueName</td>
+                                <td>FString</td>
+                                <td>
+                                    The Slot Name of the Snapshot.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Title</td>
+                                <td>FString</td>
+                                <td>
+                                    The Slot Name of the Snapshot.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>LastModifiedTimestamp</td>
+                                <td>int64</td>
+                                <td>
+                                    The date and time when the snapshot was last modified represented in unix time.
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>DeviceName</td>
+                                <td>FString</td>
+                                <td>
+                                    The model of the device used when creating the Snapshot. 
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
                 <div style="margin-bottom: 150px">
                 </div>
