add Overview content

--- a/plugins/google-play-services/saved-games/overview.html
+++ b/plugins/google-play-services/saved-games/overview.html
@@ -124,13 +124,45 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
-                        <p class="content">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <p class="content">
+                            <b>The Google Play Service: Saved Games</b>
+                        </p>
+                        <p class="content">
+                            The Saved Games service is a feature provided by Google Play Services that allows developers to save and manage game snapshots in the cloud.
+                            With this service, developers can save the game state at any point in time, enabling their players to continue playing from that exact point in the future from any compatible device.
+                        </p>
                         <p class="content" style="margin-bottom: 0rem;">
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                            The Saved Games service provides a reliable and scalable solution for game developers to implement snapshot functionality in their games.
+                            It also supports cross-platform snapshotting, allowing games to save and resume their game progress across multiple devices.
+                            In addition to saving game state, the service provides features such as snapshot management, where developers can enable players to view and manage all of their saved games.
+                            Snapshots can also be deleted and modified at any time, providing developers with full control over their players saved game data, with the possibility of exposing this functionality to the players themselves.
                         </p>
                     </div>
+                    <div class="info" style="margin-top: 20px">
+                        <p class="content">
+                            <b>The Unreal Engine Plugin</b>
+                        </p>
+                        <p class="content">
+                            This Unreal Engine plugin for the Snapshots Saved Game service is designed to expose the service's features to blueprints, making it easier for game developers to integrate the service into their games.
+                            With the plugin, developers can easily create, save, load game snapshots, and also retrieve information about snapshots and save states.
+                            The plugin provides a user-friendly interface within the Unreal Engine editor, allowing developers to connect to the service easily.
+                            By integrating the Snapshots Saved Game Service into their games using this plugin, developers can offer players a seamless and easy-to-use save and load system that is reliable and secure.
+                        </p>
+                        <p class="content">
+                            The plugin makes use of <span style="font-weight: 500">no additional libraries or imports</span>, but instead makes use of the built in google play services SDK already within Unreal Engine, meaning the size of your <span style="font-weight: 500">game bundle will hardly increase in size</span>.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            The plugin does not interfere with any of Unreal Engine's existing functionality, meaning <span style="font-weight: 500">no compilation conflicts</span> with other Unreal Engine provided libraries can occur and <span style="font-weight: 500">all existing Google Play Services provided by Unreal Engine will work as expected</span>.
+                        </p>
+                    </div>
+                    <!-- <div class="info" style="margin-top: 20px"> -->
+                        <div style="display: flex; justify-content: center; align-items: center;">
+                            <img src="../../../images/SavedGames/SavedGames_Plugin_AllNodes.png" style="width: 95%">
+                        </div>
+                    <!-- </div> -->
+                    <div style="margin-bottom: 150px">
+                    </div>
                 </div>
-                <!-- <canvas class="my-4 w-100" id="myChart"></canvas> -->
             </main>
         </div>
       </div>
