finish plugin developer guidelines

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <!-- <div class="container">
     <div class="jumbotron jumbotron-sm" style="margin-top: 50px">
       <h1 class="display-4"><b>Plugins</b></h1>
     </div>
@@ -119,7 +119,7 @@
             </div>
         </a>
     </div>
-  </div>
+  </div> -->
 
   <div class="container">
     <div class="jumbotron" style="margin-top: 50px">
