--- a/plugins/google-play-services/saved-games/contact.html
+++ b/plugins/google-play-services/saved-games/contact.html
@@ -123,7 +123,8 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content" style="margin-bottom: 0rem;">
-                            You can get support by either emailing us or preferably communicating your issue on our discord server.
+                            You can get support by emailing us at "porretgaming@gmail.com". </br></br>
+                            A discord server will be launched soon to enable our community to assist you on issues with any of the plugins offered by Porret Gaming.
                         </p>
                     </div>
                 </div>
