--- a/plugins/google-play-services/saved-games/getting_started.html
+++ b/plugins/google-play-services/saved-games/getting_started.html
@@ -122,12 +122,46 @@
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
-                        <p class="content" style="margin-bottom: 0rem;">
-                            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                        </p>
+                        <ol class="list-group list-group-flush">
+                            <li class="list-group-item">
+                                Purchase the Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Purchase the plugin on the official Unreal Engine Marketplace.
+                            </p>
+                            <li class="list-group-item">
+                                Install the Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In the Epic Games Launcher, the plugin will appear in your Library.</br>
+                                Go to the Library tab and find the plugin and add it to the engine.
+                            </p>
+                            <li class="list-group-item">
+                                Enable Google Play Saved Games Plugin
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                In Unreal Engine, the plugin will be available in the plugins section.</br>
+                                Go to <span style="font-weight: 500">Settings</span> -> <span style="font-weight: 500">Plugins</span> -> Search for "<span style="font-weight: 500">Google Play Saved Games</span>" and ensure it is enabled.
+                            </p>
+                            <li class="list-group-item">
+                                Add Snapshot Support
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                Enable Snapshot Support on Google Play Login.</br>
+                                Go to <span style="font-weight: 500">Project Settings</span> -> <span style="font-weight: 500">Android</span> -> <span style="font-weight: 500">Google Play Services</span> and enable "<span style="font-weight: 500">Enable Snapshots on Google Play login</span>".
+                            </p>
+                            <li class="list-group-item">
+                                Login to Google Play Services
+                            </li>
+                            <p class="content" style="padding-top: 10px; padding-left: 10px">
+                                On Game startup, add the Unreal Engine provided node (not provided by this plugin) to login to Google Play Services.</br>
+                                The node is called "<span style="font-weight: 500">Show External Login UI</span>".
+                            </p>
+                        </ol>
                     </div>
                 </div>
-                <canvas class="my-4 w-100" id="myChart"></canvas>
+                <div style="margin-bottom: 150px">
+                </div>
             </main>
         </div>
       </div>
