update wording for Load Function's On Game Data Retrieved Delegate

--- a/plugins/google-play-services/saved-games/loading_game.html
+++ b/plugins/google-play-services/saved-games/loading_game.html
@@ -170,7 +170,7 @@
                                 <b>On Game Data Retrieved</b>
                             </p>
                             <p class="content" style="margin-bottom: 0rem;">
-                                A delegate with <span style="font-weight: 500">UObject*</span> and <span style="font-weight: 500">SnapshotMetadata</span> parameters.
+                                A delegate with a <a href="snapshot.html">Snapshot</a> parameter containing both the <span style="font-weight: 500">UObject*</span> and <a href="snapshot_metadata.html">SnapshotMetadata</a>.</br>
                                 The <span style="font-weight: 500">UObject*</span> must be cast to the appropriate object which it was saved as and the metadata can be used later when <a href="saving_game.html">Saving the Game</a> to update the PlayedTime and ProgressValue's appropriately. 
                                 You can simply click and drag this pin to create a custom event.
                             </p>
